2008-10-15 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimXmlParser.c:
	Fixed [ 2169527 ] Some XML parsing error strings do not have sufficient
	space

2008-10-15 Sean Swehla <smswehla@linux.vnet.ibm.com>

	* msgqueue.c
	Fixed [2169514] spRcvMsg doesn't check malloc return

2008-10-04 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* test/Makefile.am configure.ac sfcb/test/unittest/Makefile.am
	Fixed [2150019] sfcb test suite, added optional unittest 
		structure.

2008-10-13 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* httpAdapter.c:
	Fixed [ 2164750 ] sfcb does not handle some malformed HTTP requests 
	correctly

2008-10-10 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* mlog.c
	Fixed [2158198] syslog call incorrect

2008-10-09 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* providerDrv.c
	Fixed [2027392] Bug in Query processing
		(patch by Luong Nguyen-Duy)

2008-10-09 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* indCIMXMLExport.c
	Fixed [2028194] Failure in generating indication 
		(patch by Luong Nguyen-Duy)

2008-10-07 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* Makefile.am configure.ac all files under sfcb/test
	Fixed [2150019] sfcb test suite

2008-10-06 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* classProviderGz.c
	Fixed [2101035] classProvider core dumps under slp/CIM client load 

2008-10-03 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerDrv.c:
	Fixed [ 2064360 ] Internal provider SIGSEGV when calling getProperty

	Fixed [ 2079099 ] SFCB should load providers with RTLD_GLOBAL
	(patch by Bart Whitely)

	Removed unused hunks of code (related to 1643936)

2008-10-02 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* indCIMXMLHandler.c:
	Fixed [ 1877578 ] sfcb appears to leak memory while handling indications

	* sfcBroker.c:
	Fixed [ 2138163 ] sfcb: Wrong PID when running as daemon
	(patch by Ingo van Lil)

	* cimcClientSfcbLocal.c, msgqueue.c: